// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snapshot GridColumn renders correctly 1`] = `
<DocumentFragment>
  <div
    class="root spacing_m align_default wrap"
  >
    <div
      class="root"
      style="--columns: 1; --index: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`snapshot GridContainer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="root spacing_m align_default wrap"
  />
</DocumentFragment>
`;
